[package]
name = "figura-backend"
version = "0.1.0"
authors = ["PoolloverNathan <nathan.kulzer@protonmail.com>"]
edition = "2018"

[dependencies]
actix = "0.13.3"
actix-web = "4.3.1"
actix-web-actors = "4.3.0"
mlua = { version = "0.9.7", features = ["luajit52", "send", "async", "macros", "serialize"] }

[dev-dependencies]
actix-rt = "1"
