[package]
name = "figura-backend"
version = "0.1.0"
authors = ["PoolloverNathan <nathan.kulzer@protonmail.com>"]
edition = "2018"

[dependencies]
actix = "0.13.3"
actix-web = { version = "4.3.1", features = ["rustls"] }
actix-web-actors = "4.3.0"
default-env = "0.1.1"
env_logger = "0.11.3"
json = "0.12.4"
mlua = { version = "0.9.7", features = ["luau", "send", "async", "macros", "serialize"] }
rustls = "0.20.9"
rustls-pemfile = "2.1.2"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"

[dev-dependencies]
actix-rt = "1"
